<resources>

    <string name="app_name">Packer Helper</string>

<!--  pallet  -->

    <string name="bottom_menu_pallet_title">Паллет</string>
    <string name="bottom_menu_pieces_counting_title">Кол-во по весу</string>
    <string name="bottom_menu_weight_counting_title">Вес по кол-ву</string>
    <string name="box_count_hint">Кол-во коробок, шт.</string>
    <string name="box_weight_hint">Вес одной коробки, кг.</string>
    <string name="tray_weight_hint">Вес поддона, кг.</string>
    <string name="gross_weight_hint">Фактич. брутто паллета, кг.</string>
    <string name="calculate_button">Рассчитать</string>
    <string name="clear_button">Очистить</string>
    <string name="package_weight_hint">Вес упаковки, кг.</string>
    <string name="package_weight_edit_button">Изм.</string>
    <string name="package_weight">Вес упаковки, кг.</string>

    <string name="clear_weight_message">Нетто: %1$.2f кг. \nДопуск нетто 1%% : %2$.2f кг.</string>
    <string name="theoretical_gross_message">Теор. брутто: %1$.2f кг. \nДопуск теор. брутто (%2$.2f кг. .. %3$.2f кг.)</string>
    <string name="less_real_gross_message">Фактич. брутто (%1$.2f кг.) меньше нижней границы допуска (%2$.2f кг.) на %3$.2f кг.</string>
    <string name="correct_real_gross_message">Фактич. брутто (%1$.2f кг.) в границах допуска ( %2$.2f кг. )</string>
    <string name="more_real_gross_message">Фактич. брутто (%1$.2f кг.) больше верхней границы допуска (%2$.2f кг.) на + %3$.2f кг.</string>
    <string name="tab_item_pieces">Штуки по весу</string>
    <string name="tab_item_weight">Вес по штукам</string>

<!--  pieces counting  -->
    <string name="weight_box_hint">Вес одной коробки, кг.</string>
    <string name="weight_100_pc_hint">Вес 100 штук, кг.</string>
    <string name="pieces_counting">Коробка весом %1$.2f кг. содержит %2$d шт.</string>
    <string name="et_starts_with_dot">0%1$s</string>

<!--  weight counting  -->
    <string name="pieces_box_hint">Количество штук в коробке, кг.</string>
    <string name="weight_counting">Изделия в количестве %1$d шт. весят %2$.2f кг.</string>
</resources>