<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_box_weight"
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/box_weight_hint"
                android:paddingVertical="9dp"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_box_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_tray_weight"
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/tray_weight_hint"
                android:paddingVertical="9dp"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_tray_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_gross_weight"
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/gross_weight_hint"
                android:paddingVertical="9dp"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_gross_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_box_count"
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/box_count_hint"
                android:paddingVertical="9dp"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_box_count"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_package_weight"
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/package_weight"
                android:paddingVertical="9dp"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_package_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
            android:id="@+id/button_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/calculate_button" />

    <TextView
            android:id="@+id/tv_clear_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            tools:text="Нетто" />

    <TextView
            android:id="@+id/tv_theoretical_gross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            tools:text="Теор. брутто" />

    <TextView
            android:id="@+id/tv_allow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            tools:text="Допуск" />

    <TextView
            android:id="@+id/tv_real_gross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            tools:text="Факт. брутто" />

</androidx.appcompat.widget.LinearLayoutCompat>