<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
            android:id="@+id/fl_box_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fl_tray_weight"
            app:layout_constraintStart_toStartOf="@id/fl_tray_weight"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/box_weight_hint"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_box_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:nextFocusForward="@id/text_input_edit_text_tray_weight"
                    android:paddingBottom="2dp"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/fl_tray_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fl_gross_weight"
            app:layout_constraintStart_toStartOf="@id/fl_gross_weight"
            app:layout_constraintTop_toBottomOf="@id/fl_box_weight">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/tray_weight_hint"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_tray_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:nextFocusForward="@id/text_input_edit_text_gross_weight"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/fl_gross_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fl_box_count"
            app:layout_constraintStart_toStartOf="@id/fl_box_count"
            app:layout_constraintTop_toBottomOf="@id/fl_tray_weight">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/gross_weight_hint"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_gross_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:nextFocusForward="@id/text_input_edit_text_box_count"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/fl_box_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/fl_package_weight"
            app:layout_constraintStart_toStartOf="@id/fl_package_weight"
            app:layout_constraintTop_toBottomOf="@id/fl_gross_weight">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/box_count_hint"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_box_count"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:nextFocusForward="@id/text_input_edit_text_package_weight"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <FrameLayout
            android:id="@+id/fl_package_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/ll_buttons"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_box_count">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/DefaultTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:hint="@string/package_weight"
                app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_package_weight"
                    style="@style/DefaultTextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="-10dp"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="255"
                    android:maxLines="1"
                    android:paddingBottom="2dp"
                    android:singleLine="true"
                    tools:text="" />

        </com.google.android.material.textfield.TextInputLayout>

    </FrameLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6" />

    <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline">

        <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/clear_button" />

        <Button
                android:id="@+id/button_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_weight="1"
                android:text="@string/calculate_button" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
            android:id="@+id/tv_clear_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            app:layout_constraintBottom_toTopOf="@id/tv_theoretical_gross"
            app:layout_constraintStart_toStartOf="@id/ll_buttons"
            app:layout_constraintTop_toBottomOf="@id/ll_buttons"
            tools:text="Нетто" />

    <TextView
            android:id="@+id/tv_theoretical_gross"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            app:layout_constraintBottom_toTopOf="@id/tv_real_gross"
            app:layout_constraintStart_toStartOf="@id/ll_buttons"
            app:layout_constraintTop_toBottomOf="@id/tv_clear_weight"
            tools:text="Теор. брутто" />

    <TextView
            android:id="@+id/tv_real_gross"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Text.MontserratMedium.14.Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ll_buttons"
            app:layout_constraintTop_toBottomOf="@id/tv_theoretical_gross"
            tools:text="Факт. брутто" />

</androidx.constraintlayout.widget.ConstraintLayout>